# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/multimedia/player_framework/config.gni")
import("./../../../multimedia_player_framework_aafwk.gni")

config("public_ffi_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("cj_metadatahelper_ffi") {
  public_configs = [ ":public_ffi_config" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  include_dirs = [
    "${multimedia_player_framework_path}/interfaces/kits/js",
    "${multimedia_player_framework_path}/frameworks/js/avrecorder",
    "${multimedia_player_framework_path}/frameworks/js/avtranscoder",
    "${multimedia_player_framework_path}/frameworks/js/recorder",
    "${multimedia_player_framework_path}/frameworks/js/media",
    "${multimedia_player_framework_path}/frameworks/js/mediasource",
    "${multimedia_player_framework_path}/frameworks/js/common",
    "${multimedia_player_framework_path}/frameworks/js/avscreen_capture",
    "${multimedia_player_framework_path}/services/utils/include",
    "${multimedia_player_framework_path}/frameworks/js/metadatahelper",
    "${multimedia_player_framework_path}/interfaces/inner_api/native/",
  ]

  sources = [
    "src/cj_avimagegenerator.cpp",
    "src/cj_avmetadataextractor.cpp",
    "src/cj_helperdatasourcecallback.cpp",
    "src/metadatahelper_ffi.cpp",
  ]

  deps = [
    "../../../interfaces/inner_api/native:media_client",
    "../../../services/utils:media_service_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:cj_image_ffi",
    "image_framework:image_native",
    "media_foundation:media_foundation",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "multimedia"
  part_name = "player_framework"
}
