# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/multimedia/player_framework/config.gni")

ohos_shared_library("audiohaptic_napi") {
  stack_protector_ret = true
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "./include",
    "./include/audio_haptic_player",
    "./../../native/audio_haptic",
    "./../../../interfaces/inner_api/native",
    "./../../../interfaces/inner_api/native/audio_haptic/include",
    "./../../../services/utils/include",
  ]

  sources = [
    "./src/audio_haptic_common_napi.cpp",
    "./src/audio_haptic_manager_napi.cpp",
    "./src/audio_haptic_player/audio_haptic_player_callback_napi.cpp",
    "./src/audio_haptic_player/audio_haptic_player_napi.cpp",
    "./src/audio_haptic_player/audio_haptic_player_options_napi.cpp",
  ]

  deps = [ "./../../native/audio_haptic:audio_haptic" ]

  external_deps = [
    "audio_framework:audio_client",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "media_foundation:media_foundation",
    "napi:ace_napi",
  ]
  relative_install_dir = "module/multimedia"
  part_name = "player_framework"
  subsystem_name = "multimedia"
}
