# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/multimedia/player_framework/config.gni")
import("./../../../multimedia_player_framework_aafwk.gni")

ohos_shared_library("systemsoundmanager") {
  include_dirs = [
    "${multimedia_player_framework_path}/frameworks/js/ringtone_manager/include",
    "${multimedia_player_framework_path}/interfaces/inner_api/native",
    "${multimedia_player_framework_path}/interfaces/inner_api/native/audio_ringtone/include",
    "${multimedia_player_framework_path}/services/utils/include",
    "${multimedia_audio_framework_path}/interfaces/inner_api/native/audiocommon/include",
    "//third_party/libuv/include",
  ]

  sources = [
    "${multimedia_player_framework_path}/frameworks/js/ringtone_manager/src/audio_renderer_info_napi.cpp",
    "${multimedia_player_framework_path}/frameworks/js/ringtone_manager/src/ringtone_common_napi.cpp",
    "${multimedia_player_framework_path}/frameworks/js/ringtone_manager/src/ringtone_options_napi.cpp",
    "${multimedia_player_framework_path}/frameworks/js/ringtone_manager/src/ringtone_player_callback_napi.cpp",
    "${multimedia_player_framework_path}/frameworks/js/ringtone_manager/src/ringtone_player_napi.cpp",
    "${multimedia_player_framework_path}/frameworks/js/ringtone_manager/src/system_sound_manager_napi.cpp",
  ]

  deps = [ "${multimedia_player_framework_path}/frameworks/native/system_sound:audio_ringtone_client" ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:napi_base_context",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "napi:ace_napi",
    "resource_management:global_resmgr",
  ]
  relative_install_dir = "module/multimedia"
  part_name = "player_framework"
  subsystem_name = "multimedia"
}
