# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/multimedia/player_framework/config.gni")
import("./../../../multimedia_player_framework_aafwk.gni")

ohos_shared_library("media_soundpool") {
  stack_protector_ret = true
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "${multimedia_player_framework_path}/frameworks/js/soundpool/include",
    "${multimedia_player_framework_path}/frameworks/js/common",
    "${multimedia_player_framework_path}/interfaces/inner_api/native",
    "${multimedia_player_framework_path}/services/utils/include",
    "${multimedia_player_framework_path}/interfaces/inner_api/native/soundpool/include",
  ]

  sources = [
    "${multimedia_player_framework_path}/frameworks/js/common/common_napi.cpp",
    "${multimedia_player_framework_path}/frameworks/js/soundpool/src/soundpool_callback_napi.cpp",
    "${multimedia_player_framework_path}/frameworks/js/soundpool/src/soundpool_napi.cpp",
  ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
    "-Wunused-variable",
    "-Wunused-private-field",
  ]

  deps = [
    "${multimedia_player_framework_path}/frameworks/native/soundpool:soundpool_client",
    "${multimedia_player_framework_path}/interfaces/inner_api/native:media_client",
    "${multimedia_player_framework_path}/services/utils:media_service_utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_base_context",
    "ability_runtime:napi_common",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "av_codec:av_codec_client",
    "bounds_checking_function:libsec_shared",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "napi:ace_napi",
    "qos_manager:qos",
    "resource_management:global_resmgr",
  ]

  defines = []
  defines += player_framework_defines
  innerapi_tags = [ "platformsdk" ]
  part_name = "player_framework"
  subsystem_name = "multimedia"
}
