# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/multimedia/player_framework/config.gni")
import("./../../../multimedia_player_framework_aafwk.gni")

ohos_shared_library("systemsoundmanager") {
  stack_protector_ret = true
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "./include",
    "./include/ringtone_player",
    "./include/system_sound_player",
    "./include/system_tone_player",
    "./include/tone_attrs",
    "./include/tone_haptics_attrs",
    "./../avplayer/",
    "./../common/",
    "./../../native/system_sound_manager",
    "./../../native/system_sound_manager/system_sound_player",
    "./../../../interfaces/inner_api/native",
    "./../../../interfaces/inner_api/native/system_sound_manager/include",
    "./../../../services/utils/include",
    "./../common",
  ]

  sources = [
    "./../common/common_napi.cpp",
    "./src/ringtone_player/audio_renderer_info_napi.cpp",
    "./src/ringtone_player/ringtone_common_napi.cpp",
    "./src/ringtone_player/ringtone_options_napi.cpp",
    "./src/ringtone_player/ringtone_player_callback_napi.cpp",
    "./src/ringtone_player/ringtone_player_napi.cpp",
    "./src/system_sound_manager_napi.cpp",
    "./src/system_sound_manager_napi_ext.cpp",
    "./src/system_sound_player/system_sound_player_napi.cpp",
    "./src/system_tone_player/system_tone_callback_napi.cpp",
    "./src/system_tone_player/system_tone_options_napi.cpp",
    "./src/system_tone_player/system_tone_player_napi.cpp",
    "./src/tone_attrs/tone_attrs_napi.cpp",
    "./src/tone_haptics_attrs/tone_haptics_attrs_napi.cpp",
    "./src/tone_haptics_attrs/tone_haptics_settings_napi.cpp",
  ]

  deps = [ "./../../native/system_sound_manager:system_sound_client" ]

  external_deps = [
    "ability_base:session_info",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_base_context",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "audio_framework:audio_client",
    "av_codec:av_codec_client",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "ipc:ipc_single",
    "libuv:uv",
    "media_foundation:media_foundation",
    "napi:ace_napi",
    "qos_manager:qos",
    "resource_management:global_resmgr",
  ]
  relative_install_dir = "module/multimedia"
  part_name = "player_framework"
  subsystem_name = "multimedia"
}
