# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/player_framework/config.gni")

MEDIA_ROOT_DIR = "//foundation/multimedia/player_framework"

config("media_public_config") {
  include_dirs = [
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native/media_service_helper",
  ]
}

config("media_client_ipc_config") {
  include_dirs = [
    "$MEDIA_ROOT_DIR/services/services/common",
    "$MEDIA_ROOT_DIR/services/services/monitor/client",
    "$MEDIA_ROOT_DIR/services/services/monitor/ipc",
  ]
}

config("media_client_base_config") {
  include_dirs = [
    "$MEDIA_ROOT_DIR/services/include",
    "$MEDIA_ROOT_DIR/services/utils/include",
  ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
  ]

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = []
  defines += player_framework_defines
}

ohos_shared_library("media_helper_client") {
  branch_protector_ret = "pac_ret"
  install_enable = true

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "$MEDIA_ROOT_DIR/frameworks/native/media_service_helper/media_service_helper.cpp"
  ]

  configs = [
    ":media_client_base_config",
    ":media_client_ipc_config",
  ]

  public_configs = [ ":media_public_config" ]
  deps = [
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native:media_client",
    "$MEDIA_ROOT_DIR/services/utils:media_service_utils" ]

  external_deps = [
    "audio_framework:audio_client",
    "av_codec:av_codec_client",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
    "ipc:ipc_single",
    "media_foundation:media_foundation"
  ]

  subsystem_name = "multimedia"
  part_name = "player_framework"
}
