# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/player_framework/config.gni")
import("./../../../multimedia_player_framework_aafwk.gni")

ohos_shared_library("soundpool_client") {
  stack_protector_ret = true
  install_enable = true
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "cache_buffer.cpp",
    "sound_id_manager.cpp",
    "sound_parser.cpp",
    "soundpool.cpp",
    "soundpool_manager.cpp",
    "stream_id_manager.cpp",
  ]

  include_dirs = [
    "${multimedia_player_framework_path}/interfaces/inner_api/native/soundpool/include",
    "${multimedia_player_framework_path}/services/utils/include",
  ]

  deps = [ "${multimedia_player_framework_path}/interfaces/inner_api/native:media_client" ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "qos_manager:qos",
  ]

  public_external_deps = [ "av_codec:av_codec_client" ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  defines = []

  #Soundpool low latency playback switch
  defines += [ "SOUNDPOOL_SUPPORT_LOW_LATENCY" ]
  defines += player_framework_defines

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "multimedia"
  part_name = "player_framework"
}
