# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/player_framework/config.gni")
import("./../../../multimedia_player_framework_aafwk.gni")

ohos_shared_library("soundpool_client") {
  stack_protector_ret = true
  install_enable = true
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "audio_renderer_manager.cpp",
    "audio_stream.cpp",
    "parallel_stream_manager.cpp",
    "sound_id_manager.cpp",
    "sound_parser.cpp",
    "soundpool.cpp",
    "soundpool_manager.cpp",
    "soundpool_manager_multi.cpp",
    "soundpool_xcollie.cpp",
    "stream.cpp",
    "stream_id_manager.cpp",
  ]

  include_dirs = [
    "${multimedia_player_framework_path}/interfaces/inner_api/native/soundpool/include",
    "${multimedia_player_framework_path}/services/services/engine_intf",
    "${multimedia_player_framework_path}/services/utils/include",
    "${multimedia_player_framework_path}/frameworks/native/soundpool",
  ]

  deps = [
    "${multimedia_player_framework_path}/interfaces/inner_api/native:media_client",
    "${multimedia_player_framework_path}/services/utils:media_service_utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "audio_framework:audio_client",
    "audio_framework:audio_common",
    "audio_framework:audio_renderer",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "ffrt:libffrt",
    "graphic_surface:surface",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "qos_manager:qos",
  ]

  if (player_framework_support_drm) {
    external_deps += [ "drm_framework:drm_framework" ]
  }

  public_external_deps = [ "av_codec:av_codec_client" ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  defines = []

  defines += player_framework_defines

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "multimedia"
  part_name = "player_framework"
}
